[gd_scene load_steps=10 format=3 uid="uid://n35egd710fbp"]

[ext_resource type="Texture2D" uid="uid://ch3p7s47txsjq" path="res://Assets/onca.png" id="1_aji5x"]
[ext_resource type="Script" uid="uid://3b1q06i6pnxh" path="res://Scripts/Comportamentos/Onca.gd" id="1_y63wj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y63wj"]
atlas = ExtResource("1_aji5x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rmha"]
atlas = ExtResource("1_aji5x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ialr"]
atlas = ExtResource("1_aji5x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfj20"]
atlas = ExtResource("1_aji5x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_obxps"]
atlas = ExtResource("1_aji5x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1i8sl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y63wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rmha")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ialr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfj20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obxps")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bu83e"]
radius = 7.07107

[node name="Node2D" type="Node2D"]
script = ExtResource("1_y63wj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1i8sl")
animation = &"hover"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bu83e")

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
